--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "admin-lte": "^3.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
