Start vue_rails implementation

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,10 @@ _Pvt_Extensions
 # JetBrains Rider
 *.sln.iml
 .idea/*
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
