--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,23 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+#   Ensure the Database Adapter gem is defined in your Gemfile
+#     gem 'your-database-adapter-here'
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter:  <%= ENV.fetch("db_adapter") %>
+  pool:     <%= ENV.fetch("db_pool") %>
+  timeout:  <%= ENV.fetch("db_timeout") %>
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: <%= ENV.fetch("db_name_dev") %>
+
+production:
+  <<: *default
+  database: <%= ENV.fetch("db_name_prod") %>
 
 # Warning: The database defined as "demo_form" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/demo_form.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+  database: <%= ENV.fetch("db_name_test") %>
